--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,51 @@
 #root {
-  max-width: 1280px;
+  width: 100%;
+  height: 100vh;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+.navContainer{
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+  color: black;
+}
+
+.navBar{
+  background: linear-gradient(179.4deg, rgb(253, 240, 233) 2.2%, rgb(255, 194, 203) 96.2%);;
+  flex-basis: auto;
+  width: 100%;
+  color: black;
+  border-radius: 25px;
+  box-shadow: 8px 8px 15px 0px rgba(209,54,54,0.74);
+-webkit-box-shadow: 8px 8px 15px 0px rgba(209,54,54,0.74);
+-moz-box-shadow: 8px 8px 15px 0px rgba(209,54,54,0.74);
+  border-color: red;
+}
+
+#nav-list{
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+  letter-spacing: .5rem;
+  opacity: 1;
+  
+}
+#nav-list :hover{
+  transform: scale(1.2);
+}
+
+.buttonNav{
+  /* background: rgb(142, 84, 249); */
+  background: white;
+  color: black;
+  font-weight: bolder;
+  opacity: .5;
+}
+.buttonNav :hover{
+ transform: scale(1.2);
 }
 
 .logo {
@@ -16,6 +59,111 @@
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+.proyects{
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+.portfolioTitle{
+  font-family:Arial, Helvetica, sans-serif;
+font-weight: bolder;
+}
+#portfolioTitleH3  {
+position: relative;
+bottom: 1rem;
+}
+.nosotros{
+  display: inline;
+  justify-self:flex-start;
+}
+#proyectsConti{
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 1920px;
+  height: 1080px;
+  align-items: flex-start;
+  padding-top: 3rem;
+  position: relative;
+  
+}
+#proyectsConti #info {
+  
+  align-self: flex-start;
+  
+}
+
+#info{
+  width: 100%;
+  align-items: right;
+  text-align: right;
+  transform: scale(.5);
+  justify-content: flex-start;
+  justify-self: flex-start;
+
+}
+
+
+
+#proyect-Center{
+  /* align-self: center ; */
+}
+
+.myImage2{
+  /* border: solid rgb(56, 55, 55) .5rem; */
+  justify-self: center;
+  width: 30%;
+  height: auto;
+  border-radius: 15px;
+
+}
+
+.collage {
+  transform: scale(.4);
+  position: relative;
+  flex-basis: auto;
+  align-items: flex-start;
+  display: flex;
+  flex-wrap: wrap;
+  height: min-content;
+}
+.collage img {
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  width: 50%;
+  /* position: relative;
+  bottom: 158rem;
+  left: 60rem; */
+}
+
+#collageImg{
+  display: flex;
+  overflow: hidden;
+  width: 100%;
+  height: 750px;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.img1{
+  width: 40%;
+  z-index: 1;
+}
+.img2{
+  width: 39%;
+
+}
+.img3{
+  width: 35%;
+
+}
+.img4{
+  width: 42%;
+
 }
 
 @keyframes logo-spin {
