--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,27 +8,33 @@
 
 .navContainer{
   display: flex;
-  align-items: flex-start;
   width: 100%;
   color: black;
 }
 
 .navBar{
+  flex-basis: auto;
+  width: 100%;
+  color: black;
+}
+/* .navBar{
   background: linear-gradient(179.4deg, rgb(253, 240, 233) 2.2%, rgb(255, 194, 203) 96.2%);;
   flex-basis: auto;
   width: 100%;
   color: black;
   border-radius: 25px;
-  box-shadow: 8px 8px 15px 0px rgba(209,54,54,0.74);
--webkit-box-shadow: 8px 8px 15px 0px rgba(209,54,54,0.74);
--moz-box-shadow: 8px 8px 15px 0px rgba(209,54,54,0.74);
+  box-shadow: 8px 8px 15px 0px rgba(201, 88, 88, 0.74);
+-webkit-box-shadow: 8px 8px 15px 0px rgba(252, 142, 142, 0.74);
+-moz-box-shadow: 8px 8px 15px 0px rgba(228, 152, 152, 0.74);
   border-color: red;
-}
+} */
 
 #nav-list{
   list-style: none;
   display: flex;
-  justify-content: space-evenly;
+  justify-content:space-around;
+  padding-left: 20rem;
+  padding-right: 20rem;
   letter-spacing: .5rem;
   opacity: 1;
   
@@ -38,11 +44,9 @@
 }
 
 .buttonNav{
-  /* background: rgb(142, 84, 249); */
-  background: white;
-  color: black;
+  background:none;
+
   font-weight: bolder;
-  opacity: .5;
 }
 .buttonNav :hover{
  transform: scale(1.2);
@@ -79,33 +83,16 @@ bottom: 1rem;
   display: inline;
   justify-self:flex-start;
 }
-#proyectsConti{
-  
+#proyectsConti {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  width: 1920px;
-  height: 1080px;
   align-items: flex-start;
+  justify-content: flex-start;
   padding-top: 3rem;
   position: relative;
-  
-}
-#proyectsConti #info {
-  
-  align-self: flex-start;
-  
 }
 
-#info{
-  width: 100%;
-  align-items: right;
-  text-align: right;
-  transform: scale(.5);
-  justify-content: flex-start;
-  justify-self: flex-start;
 
-}
 
 
 
@@ -142,11 +129,11 @@ bottom: 1rem;
 
 #collageImg{
   display: flex;
-  overflow: hidden;
   width: 100%;
   height: 750px;
   flex-direction: row;
   align-items: flex-start;
+  
 }
 
 .img1{
@@ -165,6 +152,8 @@ bottom: 1rem;
   width: 42%;
 
 }
+
+
 
 @keyframes logo-spin {
   from {
@@ -188,3 +177,22 @@ bottom: 1rem;
 .read-the-docs {
   color: #888;
 }
+
+@media only screen and (max-width: 768px) {
+  #nav-list {
+  max-width: max-content;
+  position: relative;
+  right: 1rem;
+  padding: 0;
+  }
+
+  .navBar{
+    display: flex;
+  }
+  .navContainer{
+   max-width: min-content;
+    display: flex;
+    justify-content: center;
+  }
+}
+
