--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,8 +26,17 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  width: 100%;
+  height: 100vh;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
+  /* overflow-x: hidden; */
+  /* overflow: hidden; */
+}
+
+html{
+  overflow-x: hidden;
 }
 
 h1 {
@@ -64,5 +73,12 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    
+ 
   }
 }
